--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-Lecture 1 : ( https://youtu.be/KRYw76-yYJk )copy it and search it on google
+Lecture 1 : ( https://youtu.be/KRYw76-yYJk ) copy it and search it on google.
