--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-Lecture 1 : ( https://youtu.be/KRYw76-yYJk ) copy it and search it on google.
-Lecture 2 : Coming soon
+<h6>Lecture 1 :</h6><a href="https://youtu.be/KRYw76-yYJk">click here </a><br>
+<h6>Lecture 2 :</h6><a href="https://youtu.be/omeMCTvxzX0">click here </a><br>
