--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                                     </div>
 
                                     <div class="col-lg-6 col-6 featured-border-start featured-border-bottom ps-5 py-2">
-                                        <strong class="featured-numbers">500000+</strong>
+                                        <strong class="featured-numbers">5 Lakh</strong>
 
                                         <p class="featured-text">Happy Students</p>
                                     </div>
