--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
                                     <p>
                                         <span class="profile-small-title">You'll Learn</span> 
-                                        <span>Asp.Net, C#, SQL & more</span>
+                                        <span>Asp.Net, C#, SQL</span>
                                     </p>
 
                                     <p>
