--- a/learning.html
+++ b/learning.html
@@ -93,7 +93,8 @@
 <br><br>
             <div style="text-align: center;"><h6>Lecture 1 :<a href="https://youtu.be/KRYw76-yYJk"> <u>click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 2 :<a href="https://youtu.be/omeMCTvxzX0"> <u>click here </u></a></h6></div><br>
-
+    
+            <div style="text-align: center;"><h6>Lecture 3 :<a href="https://youtu.be/BrVYhst-Wmk"> <u>click here </u></a></h6></div><br>
         </main>
 
         
