--- a/learning.html
+++ b/learning.html
@@ -91,7 +91,7 @@
 
 
 <br><br>
-            <div style="text-align: center;"><h6>Lecture 1 :  ASP.NET Architecture Tutorial <a href="https://youtu.be/KRYw76-yYJk"> <u> click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 1 :<p>" "</p>ASP.NET Architecture Tutorial <a href="https://youtu.be/KRYw76-yYJk"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 2 :<a href="https://youtu.be/omeMCTvxzX0"> <u>click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 3 :<a href="https://youtu.be/BrVYhst-Wmk"> <u>click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 4 :<a href="https://youtu.be/2kj3m6-7JQw"> <u>click here </u></a></h6></div><br>
