--- a/learning.html
+++ b/learning.html
@@ -91,11 +91,11 @@
 
 
 <br><br>
-            <div style="text-align: center;"><h6>Lecture 1 :<p>" "</p>ASP.NET Architecture Tutorial <a href="https://youtu.be/KRYw76-yYJk"> <u> click here </u></a></h6></div><br>
-            <div style="text-align: center;"><h6>Lecture 2 :<p>" "</p>TextBox Control <a href="https://youtu.be/omeMCTvxzX0"> <u> click here </u></a></h6></div><br>
-            <div style="text-align: center;"><h6>Lecture 3 :<a href="https://youtu.be/BrVYhst-Wmk"> <u>click here </u></a></h6></div><br>
-            <div style="text-align: center;"><h6>Lecture 4 :<a href="https://youtu.be/2kj3m6-7JQw"> <u>click here </u></a></h6></div><br>
-            <div style="text-align: center;"><h6>Lecture 5 :<a href="https://youtu.be/jyghYnwXvKI"> <u>click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 1 : ASP.NET Architecture Tutorial <a href="https://youtu.be/KRYw76-yYJk"> <u> click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 2 : TextBox Control <a href="https://youtu.be/omeMCTvxzX0"> <u> click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 3 : TextBox Control <a href="https://youtu.be/BrVYhst-Wmk"> <u>click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 4 : <a href="https://youtu.be/2kj3m6-7JQw"> <u>click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 5 : <a href="https://youtu.be/jyghYnwXvKI"> <u>click here </u></a></h6></div><br>
         </main>
 
         
