--- a/learning.html
+++ b/learning.html
@@ -96,6 +96,22 @@
             <div style="text-align: center;"><h6>Lecture 3 : TextBox Control <a href="https://youtu.be/BrVYhst-Wmk"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 4 : Radio Button <a href="https://youtu.be/2kj3m6-7JQw"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 5 : CheckBox Control <a href="https://youtu.be/jyghYnwXvKI"> <u> click here </u></a></h6></div><br>
+
+            Form Not working Now
+            <form name="contact" method="POST" data-netlify="true">
+              <p>
+                <label>Your Name: <input type="text" name="name" /></label>
+              </p>
+              <p>
+                <label>Your Code Name: <input type="text" name="Code Name" /></label>
+              </p>
+              <p>
+                <label>Message: <textarea name="Query"></textarea></label>
+              </p>
+              <p>
+                <button type="submit">Send</button>
+              </p>
+            </form>
         </main>
 
         
