--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
                             
                             <div class="col-lg-6 col-12 mt-5 mt-lg-0">
-                                <form action="" method="" class="custom-form contact-form" role="form">
+                                <form method="POST" class="custom-form contact-form" data-netlify="true">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-12">
                                             <div class="form-floating">
@@ -365,7 +365,7 @@
                                             <div class="form-floating">
                                                 <textarea class="form-control" id="message" name="message" placeholder="Tell me about the project"></textarea>
                                                 
-                                                <label for="floatingTextarea">Tell me about the project</label>
+                                                <label for="floatingTextarea">Tell me</label>
                                             </div>
                                         </div>
 
