--- a/learning.html
+++ b/learning.html
@@ -110,7 +110,7 @@
 
                                         <div class="col-lg-6 col-md-6 col-12">
                                             <div class="form-floating">
-                                                <input type="text" name="Username" id="name" class="form-control" placeholder="Username" required="">
+                                                <input type="text" name="Username" id="Username" class="form-control" placeholder="Username" required="">
                                                 
                                                 <label for="floatingInput">Username</label>
                                             </div>
