--- a/learning.html
+++ b/learning.html
@@ -98,7 +98,7 @@
             <div style="text-align: center;"><h6>Lecture 5 : CheckBox Control <a href="https://youtu.be/jyghYnwXvKI"> <u> click here </u></a></h6></div><br>
 
             <div class="col-lg-6 col-12 mt-5 mt-lg-0">
-                                <form method="POST" class="custom-form contact-form" data-netlify="true">
+                                <form method="POST" data-netlify="true">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-12">
                                             <div class="form-floating">
