--- a/learning.html
+++ b/learning.html
@@ -103,6 +103,8 @@
                                   <input type="text" id="name" name="name"><br>
                                   <label for="UserName">Username:</label><br>
                                   <input type="text" id="uname" name="uname" ><br><br>
+                                  <label for="UserName">Query:</label><br>
+                                  <input type="text" id="Queru" name="Query" ><br><br>
                                   <input type="submit" value="Submit">
                                 </form>
         </main>
