--- a/learning.html
+++ b/learning.html
@@ -97,6 +97,7 @@
             <div style="text-align: center;"><h6>Lecture 4 : Radio Button <a href="https://youtu.be/2kj3m6-7JQw"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 5 : CheckBox Control <a href="https://youtu.be/jyghYnwXvKI"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 6 : Hyperlink control <a href="https://youtu.be/tvhmERdW9lc"> <u> click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 7 : Button, LinkButton and ImageButton <a href="https://youtu.be/EuFuq-b_dHo"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>For Any Query Contact Form At Home Page</h6></div><br>
         </main>
 
