--- a/learning.html
+++ b/learning.html
@@ -99,6 +99,7 @@
             <div style="text-align: center;"><h6>Lecture 6 : Hyperlink control <a href="https://youtu.be/tvhmERdW9lc"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 7 : Button, LinkButton and ImageButton <a href="https://youtu.be/EuFuq-b_dHo"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 8 : Dropdownlist <a href="https://youtu.be/ROWKnzSCr_A"> <u> click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 9 : Retrieving selected item text, value and index of an dropdownlist <a href="https://youtu.be/WTPGe8DcnUs"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>For Any Query Contact Form At Home Page</h6></div><br>
         </main>
 
