--- a/learning.html
+++ b/learning.html
@@ -101,7 +101,8 @@
             <div style="text-align: center;"><h6>Lecture 8 : Dropdownlist <a href="https://youtu.be/ROWKnzSCr_A"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 9 : Operations on dropdownlist <a href="https://youtu.be/WTPGe8DcnUs"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 11 : Checkbox list control<a href="https://youtu.be/omUeO1-NJnA"> <u> click here </u></a></h6></div>
-            <div style="text-align: center;"><h6>For Any Query Contact Form At Home Page</h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 12 : Checkbox list Select & Deselect<a href="https://youtu.be/cpv3vbPg_Zk"> <u> click here </u></a></h6></div>
+            <div style="text-align: center;"><h6><b>We're Always Here To Help You. </b><br>For Any Query Contact Form At Home Page</h6></div><br>
         </main>
 
         
