--- a/index.html
+++ b/index.html
@@ -350,6 +350,16 @@
                                                 <label for="floatingInput">Name</label>
                                             </div>
                                         </div>
+
+                                    <div class="row">
+                                        <div class="col-lg-6 col-md-6 col-12">
+                                            <div class="form-floating">
+                                                <input type="text" name="Cname" id="name" class="form-control" placeholder="First Three Letters Of Code Name If Have" required="">
+                                                
+                                                <label for="floatingInput">Code Name</label>
+                                            </div>
+                                        </div>
+                                        
 <!--
                                         <div class="col-lg-6 col-md-6 col-12"> 
                                             <div class="form-floating">
