--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                                             <div class="form-floating">
                                                 <input type="text" name="Cname" id="name" class="form-control" placeholder="First Three Letters Of Code Name If Have" required="">
                                                 
-                                                <label for="floatingInput">Code Name If Have (First Three Letter</label>
+                                                <label for="floatingInput">Code Name File If Have (First Three Letter)</label>
                                             </div>
                                         </div>
                                         
