--- a/learning.html
+++ b/learning.html
@@ -106,6 +106,8 @@
             <div style="text-align: center;"><h6>Lecture 14 : RadioButton List Control<a href="https://youtu.be/Z257_R8Wu0o?si=VODT-HFp9t5x6Lux"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 15 : File Upload Control<a href="https://youtu.be/irF6Zomjxwc?feature=shared"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 16 : Calendar Control<a href="https://youtu.be/e4aSyPJr6yE?si=99WKpX8IEX3g02nK"> <u> click here </u></a></h6></div><br
+            <div style="text-align: center;"><h6>Lecture 17 : Calendar Control Properties<a href="https://youtu.be/pLvH4Wx_tHY?si=PSSaFeDnWxrumymC"> <u> click here </u></a></h6></div><br
+        
             <br><br><div style="text-align: center;"><h6><u>We're Always Here To Help You. </u><br>For Any Query Contact Form At Home Page</h6></div><br>
         </main>
 
