--- a/learning.html
+++ b/learning.html
@@ -108,6 +108,7 @@
             <div style="text-align: center;"><h6>Lecture 16 : Calendar Control<a href="https://youtu.be/e4aSyPJr6yE?si=99WKpX8IEX3g02nK"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 17 : Calendar Control Properties<a href="https://youtu.be/pLvH4Wx_tHY?si=PSSaFeDnWxrumymC"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 18 : Multiview Control <a href="https://youtu.be/FxOIEKpHchg?si=WolwgdGFiE0O-LAV"> <u> click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 19 : Wizard Control <a href="https://youtu.be/O0pOZdAz97Q?si=rfxRK-tjFb5wJYTx"> <u> click here </u></a></h6></div><br>
         
             <br><br><div style="text-align: center;"><h6><u>We're Always Here To Help You. </u><br>For Any Query Contact Form At Home Page</h6></div><br>
         </main>
