--- a/learning.html
+++ b/learning.html
@@ -109,6 +109,7 @@
             <div style="text-align: center;"><h6>Lecture 17 : Calendar Control Properties<a href="https://youtu.be/pLvH4Wx_tHY?si=PSSaFeDnWxrumymC"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 18 : Multiview Control <a href="https://youtu.be/FxOIEKpHchg?si=WolwgdGFiE0O-LAV"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 19 : Wizard Control <a href="https://youtu.be/O0pOZdAz97Q?si=rfxRK-tjFb5wJYTx"> <u> click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 2 : Wizard Control Properties <a href="https://youtu.be/2g_JpI7PI98?si=miGGIzykiokW5vbI"> <u> click here </u></a></h6></div><br>
         
             <br><br><div style="text-align: center;"><h6><u>We're Always Here To Help You. </u><br>For Any Query Contact Form At Home Page</h6></div><br>
         </main>
