--- a/learning.html
+++ b/learning.html
@@ -110,6 +110,7 @@
             <div style="text-align: center;"><h6>Lecture 18 : Multiview Control <a href="https://youtu.be/FxOIEKpHchg?si=WolwgdGFiE0O-LAV"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 19 : Wizard Control <a href="https://youtu.be/O0pOZdAz97Q?si=rfxRK-tjFb5wJYTx"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 20 : Wizard Control Properties <a href="https://youtu.be/2g_JpI7PI98?si=miGGIzykiokW5vbI"> <u> click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 21 : Wizard Control templates <a href="https://youtu.be/jHf7OTMMwRk?si=shVc7uUxV7swgBOj"> <u> click here </u></a></h6></div><br>
         
             <br><br><div style="text-align: center;"><h6><u>We're Always Here To Help You. </u><br>For Any Query Contact Form At Home Page</h6></div><br>
         </main>
