--- a/learning.html
+++ b/learning.html
@@ -113,6 +113,7 @@
             <div style="text-align: center;"><h6>Lecture 21 : Wizard Control templates <a href="https://youtu.be/jHf7OTMMwRk?si=shVc7uUxV7swgBOj"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 22 : Panel control <a href="https://youtu.be/dPMymRGs4Bo?si=7qb9ScqActTqh6u8"> <u> click here </u></a></h6></div><br>
             <div style="text-align: center;"><h6>Lecture 23 : Creating controls dynamically using Panel control <a href="https://youtu.be/oxyEr_w9nQo?si=z5kWY_CqjvjTqJuK"> <u> click here </u></a></h6></div><br>
+            <div style="text-align: center;"><h6>Lecture 24 : Required field validator control  <a href="https://youtu.be/CXossu5pnZA?si=M6ZNO2i1zjDqzeI5"> <u> click here </u></a></h6></div><br>
         
             <br><br><div style="text-align: center;"><h6><u>We're Always Here To Help You. </u><br>For Any Query Contact Form At Home Page</h6></div><br>
         </main>
