--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <h6 style="text-align: center;"><u>Happy 6th Anniversary Of Our Platform.</u></h6>
             <h1 style="text-align: center;"><u><a href="./learning.html">Click Here To start Learning</a></u></h1>
 
-            <h1 style="text-align: center;"><u><a> New Course Launching Soon </a></u></h1>
+            <h1 style="text-align: center;"><u>New Course Launching Soon</u></h1>
             <section class="about section-padding" id="section_2">
                 <div class="container">
                     <div class="row">
